# MiniGeo

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-model.txt  requirements.txt
configs/: model_service.example.env  qwen35_2b_lora.yaml
docs/: a100-json-sft-smoke-cells.md  a100-json64-evidence-eval-cells.md  a100-sft-base-cells.md  agent-design.md  architecture.md  benchmark.md  data-card.md  model-eval-runbook.md  project-showcase.md  qwen35-plan.md  risks.md  roadmap.md  sft-adapter-eval-runbook.md
notebooks/: minigeo_colab_template.ipynb
results/: agent_cases.json  agent_cases.md  base_qwen35_2b_smoke10.jsonl  base_qwen35_2b_smoke10.md  base_vs_sft_128step_smoke10.md  data_quality.md  failure_cases.md  local_audit.md  local_eval_summary.md  main_results.md  model_failure_analysis_150.md  model_failure_analysis_150_latest.md  model_failure_analysis_300_latest.md  model_failure_review_150.csv  model_failure_review_150.md  model_failure_review_150_latest.csv  model_failure_review_150_latest.md  model_failure_review_300_latest.csv  model_failure_review_300_latest.md  model_output_quality.md  model_output_quality_150.md  model_output_quality_150_latest.md  model_output_quality_300_latest.md  model_output_quality_smoke10.md  model_service_eval.md  model_service_model_verified_eval_300_latest.md  model_service_qwen35_4b_150_latest_no_rag.jsonl  model_service_qwen35_4b_150_latest_rag.jsonl  model_service_qwen35_4b_150_latest_rag_verified.jsonl  model_service_qwen35_4b_150_no_rag.jsonl  model_service_qwen35_4b_150_rag.jsonl  (+57 more)
(+144 files in other folders)
